spec/fixtures/invalid_rails_app/lib/invalid_code_duplication.rb
##
# I am a dog.

class Dog
  def x
    return 1
  end

  def w
    return 2 + q
  end

  private

  def q
    return 3
  end
end

##
# I
# am
# a
# cat.

class Cat
  def y
    return 1
  end

  def z
    return 2 + s
  end

  private

  def s
    return 3
  end
end
